--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
             <a href="YuvaResume.pdf" class="btn">Download Resume</a>
         </div>
         <div class="home-img">
+            <img src="yuvaedited.png" alt="">
             
             
         </div>
